--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "A card for Home Assistant Lovelace for exploring the history of your entities interactively and in real time.",
   "main": "src/index.js",
   "repository": "https://github.com/SpangleLabs/history-explorer-card",
-  "author": "JC <joshua@coales.co.uk>",
+  "author": "Roselyn Coales <roselyn@coales.co.uk>",
   "license": "MIT",
   "private": false,
   "scripts": {
     "build": "webpack --config webpack.config.js",
+    "test": "npx jest",
     "postversion": "sed -i \"s/^const Version = '[^']*';/const Version = '$npm_package_version';/\" src/history-explorer-card.js && yarn build && git add history-explorer-card.js src/history-explorer-card.js"
   },
   "devDependencies": {
+    "hass-taste-test": "^0.2.7",
+    "jest": "^29.7.0",
+    "jest-image-snapshot": "^6.4.0",
+    "playwright": "^1.50.1",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   }
